<resources>
    <string name="app_name">Server</string>
    <string name="start_up_page_name_text">Name:</string>
    <string name="start_up_page_typeServerNameBlock_hint">Please enter server name...</string>
    <string name="start_up_page_connectButton_text">CONNECT</string>
    <string name="chat_room_page_hi_text">Hi!</string>
    <string name="chat_room_page_serverName_text"></string>
    <string name="chat_room_page_chatBlock_text"></string>
    <string name="chat_room_page_typeBlock_hint">Say Something...</string>
    <string name="chat_room_page_leaveButton_text">LEAVE</string>
    <string name="chat_room_page_sendButton_text">SEND</string>
</resources>