<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomPage">

    <TextView
        android:id="@+id/chat_room_page_hi"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:text="@string/chat_room_page_hi_text"
        android:textSize="@dimen/chat_room_page_hi_textSize"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/chat_room_page_serverName"
        android:layout_width="200sp"
        android:layout_height="30sp"
        android:text="@string/chat_room_page_serverName_text"
        android:textSize="@dimen/chat_room_page_serverName_textSize"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/chat_room_page_chatBlock"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:text="@string/chat_room_page_chatBlock_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/chat_room_page_typeBlock"
        android:layout_width="260dp"
        android:layout_height="45sp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/chat_room_page_typeBlock_hint"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/chat_room_page_leaveButton"
        android:layout_width="100sp"
        android:layout_height="45sp"
        android:text="@string/chat_room_page_leaveButton_text"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintVertical_bias="0.015"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/chat_room_page_sendButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:text="@string/chat_room_page_sendButton_text"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>